# backend

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.py  pyproject.toml  sonar-project.properties
.github/workflows/: deploy-image.yml  python-tests.yml  workflow.yml
src/: __init__.py
src/app/: __init__.py
src/app/admin/: __init__.py  routes.py
src/app/constants/: __init__.py  error_messages.py  success_messages.py
src/app/internship/: __init__.py  routes.py
src/app/main/: __init__.py  routes.py
src/app/models/: favorites.py  flags.py  internships.py  roles.py  time_periods.py  users.py
src/app/schemas/: __init__.py  user_schemas.py  wrappers.py
src/app/services/: __init__.py  admin_service.py  flag_service.py  internship_service.py  time_period_service.py  upload_service.py  user_service.py
src/app/student/: __init__.py  routes.py
src/app/time_periods/: __init__.py  routes.py
src/app/upload/: __init__.py  routes.py
src/app/users/: __init__.py  routes.py
src/app/utils/: password_hasher.py
src/backend/: admin.py  internship.py  main.py  student.py
tests/: __init__.py  conftest.py  test_admin.py  test_internship.py  test_time_period.py  test_user.py
