[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["mythicalbadger <jussy12.work@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.2"
sqlalchemy = "^2.0.27"
flask-sqlalchemy = "^3.1.1"
flask-cors = "^4.0.0"
bcrypt = "^4.1.2"
flask-jwt-extended = "^4.6.0"
python-dotenv = "^1.0.1"
boto3 = "^1.34.73"
botocore = "^1.34.74"
flask-dance = "^7.1.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pre-commit = "^3.6.2"
pytest = "^8.0.2"
pytest-cov = "^4.1.0"
flake8-annotations = "^3.0.1"
flake8-eradicate = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
